fix: 编译修复 — resolveRolesByIds 使用正确字段名 + 类型推导